Explicitly implement JDK version specific workarounds as modifiers (#134)